fix: Loading spinner is not centered when searching APIs on the management part
This closes gravitee-io/issues#1717

--- a/src/index.scss
+++ b/src/index.scss
@@ -555,3 +555,9 @@ table {
   min-height: 0;
   fill: rgba(0, 0, 0, 0.54);
 }
+
+md-progress-circular {
+  display: inline-block;
+  position: absolute;
+  top: 200px;
+}
